# notes-chatbot

./: .gitignore  main.py  pyproject.toml
server/: logger.py  main.py  requirements.txt  test.py
server/middlewares/: exception_handlers.py
server/modules/: hybrid_search.py  llm.py  load_vectorstore.py  pdf_handlers.py  queryhandler.py
server/routes/: ask_question.py  upload_pdfs.py
